<?xml version="1.0"?>
<package>
  <name>qt_teleop</name>
  <version>1.2.0</version>
  <description>A package for controlling the QTrobot using a joypad</description>

  <author email="michal.stolarz@smail.inf.h-brs.de">Michal Stolarz</author>
  <maintainer email="robotics@inf.h-brs.de">MAS robotics</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export></export>
</package>
